--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Inicio#index</h1>
 <p>Find me in app/views/inicio/index.html.erb</p>
-
 <%= link_to 'Productos', productos_path %>
 <%= link_to 'Usuarios', usuarios_path %>
 <%= link_to 'Documentos', documentos_path %>
@@ -8,3 +7,12 @@
 <%= link_to 'Presentaciones', presentacions_path %>
 <%= link_to 'Requisitos', requisitos_path %>
 <%= link_to 'Tramites', tramites_path %>
+
+<br><br>prueba para ver que tal el scroll prueba para ver que tal el scroll prueba para ver que tal el scroll prueba para ver que tal el scroll prueba para ver que tal el scrollprueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll
+<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>prueba para ver que tal el scroll<br>
