Cambie links a links de Rails, imagenes tambien, nombre de compania puede ser MUY largo sin problema y tenemos un link a home 'home_path'

--- a/app_documento/app/assets/stylesheets/application.css
+++ b/app_documento/app/assets/stylesheets/application.css
@@ -35,11 +35,11 @@ footer,#headUp {
   background: #A8183C;
 }
 
-/************************BEGIN HEADER************************/
-
 #logo {
-  height: 70%;
-  margin: 8px;
+  max-height: 80%;
+  max-width: 50%;
+  margin-left: 8px;
+  margin-top: 6px;
   float: left;
 }
 
@@ -54,6 +54,7 @@ footer,#headUp {
   box-shadow: 0 0 30px;
 }
 
+/************************BEGIN HEADER************************/
 header {
   height: 78px;
   margin-bottom: 5px;
@@ -68,11 +69,6 @@ header {
 
 #headUp ul {
   float: right;
-}
-
-#headUp ul li:hover {
-  background: #ffaaaa;
-  cursor: pointer;
 }
 
 #headDown {
@@ -96,10 +92,21 @@ header {
 .dropClose {
   text-align: center;
   width: 100px;
+  height: 20px;
   float: right;
   padding: 0 20px;
   border: 1px solid #666;
   border-radius: 10px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+}
+
+.dropClose:hover {
+  background: #ffaaaa;
+  cursor: pointer;
 }
 
 .dropOpen {
@@ -128,7 +135,6 @@ header {
 }
 
 /*************************END HEADER*************************/
-
 #content {
   height: 533px;
   width: 890px;
@@ -138,7 +144,6 @@ header {
 }
 
 /************************BEGIN FOOTER************************/
-
 footer {
   text-align: center;
   height: 28px;
@@ -163,6 +168,7 @@ footer li {
   padding-right: 10px;
   width: 30%;
 }
+
 footer img {
   height: 90%;
 }
