--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <%= link_to image_tag("http://placehold.it/2000x200/234567/ffffff.png", :id => "logo"), home_path %>
         <ul id="navigation">
           <li class="dropClose" title="Mi Compaadad saajandjknasd adasjansdjkankjdnasd asdjkajkdnaskjñia">Mi Compaadad saajandjknasd adasjansdjkankjdnasd asdjkajkdnaskjñia</li>
-          <li class="dropClose">Alertas<img id="alerta" src="/assets/red.png"></li>
+          <li class="dropClose">Alertas<img id="alerta" src="/assets/red.png"></li> <!-- NOTE: Color depende de alertas -->
         </ul>
         <ul id="company" class="dropOpen">
           <li class="dropElem">Configuración</li>
