Usando gema devise, crea usuario, aun no autentica

--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <b>Contrasena:</b>
-  <%= @usuario.contrasena %>
+  <%= @usuario.password %>
 </p>
 
 <p>
   <b>Mail:</b>
-  <%= @usuario.mail %>
+  <%= @usuario.email %>
 </p>
 
 <p>
