--- a/app_documento/app/views/devise/registrations/new.html.erb
+++ b/app_documento/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@
   </div>
   <div class="field">
     <%= f.label :admin %><br />
-    <%= f.number_field :admin %>
+    <%= f.select :admin, [['Cliente', 0 ], ['Admin', 1], ['Super-Admin', 2]] %>
   </div>
   <div class="actions">
     <%= f.submit %>
