--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Inicio controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+p {
+  text-align: justify;
+}
+
+#division {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  margin: 0;
+  border-spacing: 0;
+
+  tr {
+    width: 100%;
+    height: 100%;
+    border: 0;
+
+    td {
+      width: 50%;
+      height: 100%;
+      border: 0;
+      padding: 5px;
+      background: #ddd;
+    }
+  }
+}
