--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
   <div id="wrapper">
     <header>
       <div id="headUp">
-        <%= link_to image_tag("http://placehold.it/2000x200/234567/ffffff.png", :id => "logo"), home_path %>
+        <%= link_to image_tag("http://placehold.it/500x50/234567/ffffff.png", :id => "logo"), home_path %>
         <ul id="navigation">
           <li class="dropClose" title="Mi Compania larga">Mi Compania larga</li>
           <li class="dropClose">Alertas<div id="alerta"></div></li>
