--- a/app_documento/app/assets/stylesheets/application.css.scss
+++ b/app_documento/app/assets/stylesheets/application.css.scss
@@ -12,11 +12,16 @@
  *
  *= require_self
  *= require_tree .
+ *= require formalize
  */
+
+// Colores de la aplicacion
+
 body {
   font-family: helvetica !important;
   font-size: 16px;
-  background: url(vino.png) no-repeat center center fixed;
+  background: white no-repeat center center fixed;
+  background-image: url(fondo2.png);
   margin: 0;
 
   -webkit-background-size: cover;
@@ -37,10 +42,10 @@ a,a:visited {
   text-decoration: none;
   color: black !important;
   background: transparent !important;
-}
 
-a:hover {
-  font-style: italic;
+  &:hover {
+    font-style: italic;
+  }
 }
 
 footer,#headUp {
@@ -82,10 +87,10 @@ header {
 #headUp {
   height: 50px;
   border-bottom: 1px solid #666;
-}
 
-#headUp ul {
-  float: right;
+  ul {
+    float: right;
+  }
 }
 
 .dropOpen,.dropClose {
@@ -107,11 +112,11 @@ header {
   -o-text-overflow: ellipsis;
   -ms-text-overflow: ellipsis;
   text-overflow: ellipsis;
-}
 
-.dropClose:hover {
-  background: #ffaaaa;
-  cursor: pointer;
+  &:hover {
+    background: #ffaaaa;
+    cursor: pointer;
+  }
 }
 
 .dropOpen {
@@ -146,21 +151,21 @@ header {
   float: left;
   padding: 0 20px;
   border-right: 1px solid #666;
-}
 
-.nav:hover {
+  &:hover {
   background: #ffaaaa;
+}
 }
 
 /*************************END HEADER*************************/
 #content {
   position: absolute;
-  overflow: hidden;
   top: 72px;
   bottom: 26px;
-  margin: 5px 0;
-  padding: 0 8px;
+  padding: 5px 0;
+  margin: 0 8px;
   overflow: auto;
+  width: 884px;
 
   -webkit-user-select: text;
   -moz-user-select: text;
@@ -178,28 +183,28 @@ footer {
   height: 25px;
   border-top: 1px solid #666;
   margin-top: 5px;
-}
 
-footer ul {
-  margin: auto;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
+  ul {
+    margin: auto;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 
-footer li {
-  height: 25px;
-  line-height: 25px;
-  font-size: 15px;
-  text-align: center;
-  float: right;
-  margin: auto;
-  padding-right: 10px;
-  width: 30%;
-}
+    li {
+      height: 25px;
+      line-height: 25px;
+      font-size: 15px;
+      text-align: center;
+      float: right;
+      margin: auto;
+      padding-right: 10px;
+      width: 30%;
+    }
+  }
 
-footer img {
-  height: 90%;
+  img {
+    height: 90%;
+  }
 }
 
 /*************************END FOOTER*************************/
