--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -25,6 +25,10 @@ p {
       border: 0;
       padding: 5px;
 
+      #saber {
+        color: #029 !important;
+      }
+
       form {
         margin: auto;
         width: 250px;
