Configuracion de internacionalizacion

--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -11,3 +11,5 @@
   <%= current_usuario.compania %>
   <%= link_to 'Salir', destroy_usuario_session_path, :method => :delete %>
 <% end %>
+<%= link_to 'Español', :locale => "es" %>
+<%= link_to 'Ingles', :locale => "en" %>
