--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -49,6 +49,7 @@
       <% end %>
 </p>
 
-
-<%= link_to 'Edit', edit_usuario_path(@usuario) %> |
+<% if current_usuario.admin == 2 %>
+  <%= link_to 'Edit', edit_usuario_path(@usuario) %> 
+<% end %>
 <%= link_to 'Back', usuarios_path %>
