--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -45,3 +45,27 @@ p {
     }
   }
 }
+
+#tablas_inicio {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  border-spacing: 0;
+  margin-top: -12px;
+
+  tr {
+    width: 100%;
+    height: 100%;
+
+    td {
+      width: 50%;
+      height: 100%;
+      padding: 5px;
+
+      table {
+        max-height: 400px;
+      }
+
+    }
+  }
+}
