obteniendo ultima version

--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -1,8 +1,66 @@
-<table id="tablas_inicio" border="1">
+<center>
+<table id="tablas_inicio" >
   <tr>
     <td>
-      
+      <table id="mis_productos" border="1">
+        <thead>
+          <th>Nombre</th>
+          <th>Marca</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Producto 1</td>
+            <td>Marca 1</td>
+          </tr>
+          <tr>
+            <td>Producto 2</td>
+            <td>Marca 2</td>
+          </tr>
+          <tr>
+            <td>Producto 3</td>
+            <td>Marca 3</td>
+          </tr>
+          <tr>
+            <td>Producto 4</td>
+            <td>Marca 4</td>
+          </tr>
+          <tr>
+            <td>Producto 5</td>
+            <td>Marca 5</td>
+          </tr>
+        </tbody>
+      </table>
     </td>
-    <td>CHAOOO</td>
-  </tr>
+    <td>
+      <table id="mis_solicitudes" border="1">
+        <thead>
+          <th>Nombre</th>
+          <th>Estado</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Solicitud 1</td>
+            <td><div class="alerta"></div></td>
+          </tr>
+          <tr>
+            <td>Solicitud 2</td>
+            <td><div class="alerta" style="background: red;"></div></td>
+          </tr>
+          <tr>
+            <td>Solicitud 3</td>
+            <td><div class="alerta" style="background : yellow"></div></td>
+          </tr>
+          <tr>
+            <td>Solicitud 4</td>
+            <td><div class="alerta" ></div></td>
+          </tr>
+          <tr>
+            <td>Solicitud 5</td>
+            <td><div class="alerta" style="background: blue"></div></td>
+          </tr>
+        </tbody>
+      </table>
+    </td>
+ </tr>
 </table>
+</center>
