--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <% if usuario_signed_in? %>
           <ul id="navigation">
             <li class="dropClose" title="Mi Compania larga">Mi Compania larga</li>
-            <li class="dropClose">Alertas<div id="alerta"></div></li>
+            <li class="dropClose">Alertas<div class="alerta"></div></li>
             <!-- NOTE: Color depende de alertas -->
           </ul>
           <ul id="company" class="dropOpen">
