--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -47,12 +47,11 @@ p {
 }
 
 #tablas_inicio {
-  width: 100%;
+  width: 800px;
   height: 100%;
   margin: 0;
   border-spacing: 0;
-  margin-top: -12px;
-
+  margin-top: 100px;
   tr {
     width: 100%;
     height: 100%;
@@ -61,11 +60,29 @@ p {
       width: 50%;
       height: 100%;
       padding: 5px;
-
+      
       table {
-        max-height: 400px;
+        
+        width: 300px !important;
+        border: 0;
       }
-
     }
   }
+}
+
+#mis_productos {
+}
+
+#mis_solicitudes {
+  
+}
+#mis_productos_filter {
+  float: right; 
+}
+
+.dataTables_wrapper {
+
+  min-height: 300px;
+  background: red;
+  
 }
