--- a/app_documento/app/assets/stylesheets/application.css.scss
+++ b/app_documento/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,9 @@
 
 // Colores de la aplicacion
 
-$hover_brown : #D3A099;
+$hover_color      : #D3A099;
+$background_color : #911100;
+$border_color     : #555;
 
 body {
   font-family: helvetica !important;
@@ -50,10 +52,6 @@ a,a:visited {
   }
 }
 
-footer,#headUp {
-  background: #911100;
-}
-
 #logo {
   height: 80%;
   max-height: 80%;
@@ -66,7 +64,7 @@ footer,#headUp {
 #wrapper {
   width: 900px;
   height: 95%;
-  border: 1px solid #666;
+  border: 1px solid $border_color;
   background: white;
   margin: 20px auto;
   left: 50%;
@@ -88,7 +86,8 @@ header {
 
 #headUp {
   height: 50px;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid $border_color;
+  background: $background_color;
 
   ul {
     float: right;
@@ -102,7 +101,7 @@ header {
       width: 120px;
       height: 20px;
       float: right;
-      border: 1px solid #666;
+      border: 1px solid $border_color;
 
       /*Puntos suspensivos*/
       white-space: nowrap;
@@ -112,7 +111,7 @@ header {
       text-overflow: ellipsis;
 
       &:hover {
-        background: $hover_brown;
+        background: $hover_color;
         color: white;
         cursor: pointer;
       }
@@ -123,10 +122,10 @@ header {
   .dropAppear {
     display: none;
     position: absolute;
+    max-height: 315px;
+    overflow-y: auto;
     top: 35px;
-    border: 1px #666 solid;
-    border-top: none;
-    border-bottom: none;
+    border: 1px $border_color solid;
     margin-right: 10px;
     z-index: 10;
     background: white;
@@ -136,7 +135,7 @@ header {
       max-width: 120px;
       height: 20px;
       padding: 0 20px;
-      border-bottom: 1px #666 solid;
+      border-bottom: 1px $border_color solid;
 
       &:hover {
         background: #ffaaaa;
@@ -202,16 +201,16 @@ header {
   padding: 0;
   margin: 0;
   margin-left: 8px;
-  border-left: 1px solid #666;
-  border-bottom: 1px solid #666;
+  border-left: 1px solid $border_color;
+  border-bottom: 1px solid $border_color;
 
   .nav {
     float: left;
     padding: 0 20px;
-    border-right: 1px solid #666;
+    border-right: 1px solid $border_color;
 
     &:hover {
-      background: $hover_brown;
+      background: $hover_color;
       color: white;
       font-style: normal;
     }
@@ -242,8 +241,9 @@ footer {
   width: 100%;
   text-align: center;
   height: 25px;
-  border-top: 1px solid #666;
+  border-top: 1px solid $border_color;
   margin-top: 5px;
+  background: $background_color;
 
   ul {
     margin: auto;
