--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -10,126 +10,124 @@
       <% end %>
     </tr>
     <tr>
-    <td>
-      <table id="mis_productos">
-        <thead>
-          <% if current_usuario.admin == 0 %>
-            <th>Nombre</th>
-            <th>Marca</th>
-            <th>Registro</th>
-          <% else %>
-            <th>Usuario</th>
-            <th>Actividad</th>
-            <th>Fecha</th>
-          <% end %>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Producto 1</td>
-            <td>Marca 1</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 2</td>
-            <td>Marca 2</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 3</td>
-            <td>Marca 3</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 3 4</td>
-            <td>Marca 4</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 5</td>
-            <td>Marca 5</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 5</td>
-            <td>Marca 5</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 5</td>
-            <td>Marca 5</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 5</td>
-            <td>Marca 5</td>
-            <td>XXXXXX</td>
-          </tr>
-          <tr>
-            <td>Producto 5</td>
-            <td>Marca 5</td>
-            <td>XXXXXX</td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
-    <td>
-      <table id="mis_solicitudes">
-        <thead>
-          <% if current_usuario.admin == 0 %>
-            <th>Nombre</th>
-            <th>Producto</th>
-            <th>Edo</th>
-          <% else %>
-            <th>Nombre</th>
-            <th>Producto</th>
-            <th>Usuario</th>
-            <th>Edo</th>
-          <% end %>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Solicitud 1</td>
-            <td>Producto 1</td>
-            <% if current_usuario.admin > 0 %>
-              <td>Usuario X</td>
+      <td>
+        <table id="mis_productos">
+          <thead>
+            <% if current_usuario.admin == 0 %>
+              <th>Nombre</th>
+              <th>Marca</th>
+              <th>Registro</th>
+            <% else %>
+              <th>Usuario</th>
+              <th>Actividad</th>
+              <th>Fecha</th>
             <% end %>
-            <td><div class="alerta"></div></td>
-          </tr>
-          <tr>
-            <td>Solicitud 2</td>
-            <td>Producto 2</td>
-            <% if current_usuario.admin > 0 %>
-              <td>Usuario X</td>
+          </thead>
+          <tbody>
+            <!-- NOTE: for de los porductos/registros -->
+            <tr>
+              <td>Producto 1</td>
+              <td>Marca 1</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 2</td>
+              <td>Marca 2</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 3</td>
+              <td>Marca 3</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 3 4</td>
+              <td>Marca 4</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 5</td>
+              <td>Marca 5</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 5</td>
+              <td>Marca 5</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 5</td>
+              <td>Marca 5</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 5</td>
+              <td>Marca 5</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
+              <td>Producto 5</td>
+              <td>Marca 5</td>
+              <td>XXXXXX</td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <table id="mis_solicitudes">
+          <thead>
+              <th>Nombre</th>
+              <th>Producto</th>
+            <% if current_usuario.admin == 1 || current_usuario.admin == 2 %>
+              <th>Usuario</th>
             <% end %>
-            <td><div class="alerta" style="background: red;"></div></td>
-          </tr>
-          <tr>
-            <td>Solicitud 3</td>
-            <td>Producto 3</td>
-            <% if current_usuario.admin > 0 %>
-              <td>Usuario X</td>
-            <% end %>
-            <td><div class="alerta" style="background : yellow"></div></td>
-          </tr>
-          <tr>
-            <td>Solicitud 4</td>
-            <td>Producto 4</td>
-            <% if current_usuario.admin > 0 %>
-              <td>Usuario X</td>
-            <% end %>
-            <td><div class="alerta" ></div></td>
-          </tr>
-          <tr>
-            <td>Solicitud 5</td>
-            <td>Producto 5</td>
-            <% if current_usuario.admin > 0 %>
-              <td>Usuario X</td>
-            <% end %>
-            <td><div class="alerta" style="background: blue"></div></td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
- </tr>
-</table>
+              <th class="estado">Edo</th>
+          </thead>
+          <tbody>
+            <!-- NOTE: for de las solicitudes -->
+            <tr>
+              <td>Solicitud 1</td>
+              <td>Producto 1</td>
+              <% if current_usuario.admin > 0 %>
+                <td>Usuario X</td>
+              <% end %>
+              <td class="estado"><div class="alerta"></div></td>
+            </tr>
+            <tr>
+              <td>Solicitud 2</td>
+              <td>Producto 2</td>
+              <% if current_usuario.admin > 0 %>
+                <td>Usuario X</td>
+              <% end %>
+              <td class="estado"><div class="alerta" style="background: red;"></div></td>
+            </tr>
+            <tr>
+              <td>Solicitud 3</td>
+              <td>Producto 3</td>
+              <% if current_usuario.admin > 0 %>
+                <td>Usuario X</td>
+              <% end %>
+              <td class="estado"><div class="alerta" style="background : yellow"></div></td>
+            </tr>
+            <tr>
+              <td>Solicitud 4</td>
+              <td>Producto 4</td>
+              <% if current_usuario.admin > 0 %>
+                <td>Usuario X</td>
+              <% end %>
+              <td class="estado"><div class="alerta" ></div></td>
+            </tr>
+            <tr>
+              <td>Solicitud 5</td>
+              <td>Producto 5</td>
+              <% if current_usuario.admin > 0 %>
+                <td>Usuario X</td>
+              <% end %>
+              <td class="estado"><div class="alerta" style="background: blue"></div></td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+  </table>
 </center>
